tests/invalid/try_bad_params.err_exp
try_bad_params.m:019: Error: duplicate io try parameter.
try_bad_params.m:028: Error: invalid try goal parameter `bloop'.
try_bad_params.m:037: In clause for predicate `main_3'/2:
try_bad_params.m:037:   in initial I/O state variable of try goal:
try_bad_params.m:037:   type error: [38;5;87mvariable `STATE_VARIABLE_Int_0'[39;49m has type
try_bad_params.m:037:     [38;5;203mint;[39;49m
try_bad_params.m:037:   expected type was
try_bad_params.m:037:     [38;5;40mio.state.[39;49m
try_bad_params.m:037: In clause for predicate `main_3'/2:
try_bad_params.m:037:   in final I/O state variable of try goal:
try_bad_params.m:037:   type error: [38;5;87mvariable `STATE_VARIABLE_Int'[39;49m has type
try_bad_params.m:037:     [38;5;203mint;[39;49m
try_bad_params.m:037:   expected type was
try_bad_params.m:037:     [38;5;40mio.state.[39;49m
try_bad_params.m:046: Error: the argument of io should be a state variable.
try_bad_params.m:055: Error: io takes exactly one argument, which should be a
try_bad_params.m:055:   state variable name.
For more information, recompile with `-E'.
